src/test/deca/context/invalid/Obj/decl-methode-param-typeinconnu.deca
// Description:
//    Définition d'une méthode avec un paramètre de type inconnu
//
// Résultat:
//Le type du paramètre n'est pas défini
//
class A {
    void methode(inconnu a){}
}
{}